2006-09-26  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* gnome-screenshot.desktop.in: Add the OtherBinaries key
	for Bugzilla to the desktop file.

2006-09-26  Ross Burton  <ross@burtonini.com>

	* screenshot-dialog.c:
	Implement the advertised dragging of image data (#354685).

2006-08-25  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* screenshot-shadow.c (create_outline_filter): outline
	filter is now a filled square instead of filled
	circle. (#310860, Emmanuel Pacaud)

2006-08-25  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* screenshot-dialog.c (screenshot_dialog_new): Use the
	UTF-8 functions to select just the file name and not the
	extension. (#348896, Kouhei Sutou)

2006-08-08  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* screenshot-utils.c (get_window_property): Fix the
	call to XGetWindowProperty that got mangled by the
	compiler fixes patch of bug #318095. (#350447)

2006-07-01  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* screenshot-dialog.c (screenshot_dialog_new): Use
	g_utf8_strrchr() to find the last mark before the
	extension.

2006-06-14  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* screenshot-dialog.c: Fix includes.

2006-06-11  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* gnome-egg-xfer-dialog.c:
	* screenshot-dialog.c:
	* screenshot-save:
	* screenshot-utils.c:
	* screenshot-xfer.c: Fix includes, and drop deprecated I18N
	header gnome-i18n.h (Kristof Vansant, #167098).

	* screenshot-utils.c (get_utf8_property), (find_toplevel_window),
	(look_for_hint_helper): Fix signedness warnings.
	
	* gnome-screenshot.desktop.in: Fix Comment key using the
	description provided in http://live.gnome.org/UsabilityTeam/Menu.

2006-04-23  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* screenshot-utils.c (screenshot_get_pixbuf): Compose with the
	root window in order to avoid showing garbage for half-visible
	windows and for menus (Björn Lindqvist, fixes bug #121492
	and #165949)

2006-04-23  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* screenshot-dialog.c: